src/widgets/depgraph/app.css
:root {
  --window-height: 1080px;
  --estimated-window-overhead: 316px;
  --graph-height: calc(var(--window-height) - var(--estimated-window-overhead));

  /* Constants. */
  --vis-timeline-tree-step: 12px;
  /* Colors. */
  --yt-palette-0-fg: #444;
  --yt-palette-1-fg: #fff;
  --yt-palette-2-fg: #fff;
  --yt-palette-3-fg: #fff;
  --yt-palette-4-fg: #fff;
  --yt-palette-5-fg: #fff;
  --yt-palette-6-fg: #fff;
  --yt-palette-7-fg: #fff;
  --yt-palette-8-fg: #fff;
  --yt-palette-9-fg: #fff;
  --yt-palette-10-fg: #fff;
  --yt-palette-11-fg: #fff;
  --yt-palette-12-fg: #fff;
  --yt-palette-13-fg: #444;
  --yt-palette-14-fg: #444;
  --yt-palette-15-fg: #45818e;
  --yt-palette-16-fg: #888;
  --yt-palette-17-fg: #4da400;
  --yt-palette-18-fg: #b45f06;
  --yt-palette-19-fg: #444;
  --yt-palette-20-fg: #fff;
  --yt-palette-21-fg: #3d85c6;
  --yt-palette-22-fg: #dc5766;
  --yt-palette-23-fg: #b45f06;
  --yt-palette-24-fg: #444;
  --yt-palette-25-fg: #444;
  --yt-palette-26-fg: #444;
  --yt-palette-27-fg: #444;
  --yt-palette-28-fg: #fff;
  --yt-palette-29-fg: #fff;
  --yt-palette-30-fg: #fff;
  --yt-palette-31-fg: #fff;
  --yt-palette-32-fg: #fff;
  --yt-palette-33-fg: #fff;
  --yt-palette-34-fg: #fff;
  --yt-palette-35-fg: #fff;
  --yt-palette-0-bg: #fff;
  --yt-palette-1-bg: #8d5100;
  --yt-palette-2-bg: #ce6700;
  --yt-palette-3-bg: #409600;
  --yt-palette-4-bg: #0070e4;
  --yt-palette-5-bg: #900052;
  --yt-palette-6-bg: #0050a1;
  --yt-palette-7-bg: #2f9890;
  --yt-palette-8-bg: #8e1600;
  --yt-palette-9-bg: #dc0083;
  --yt-palette-10-bg: #7dbd36;
  --yt-palette-11-bg: #ff7123;
  --yt-palette-12-bg: #ff7bc3;
  --yt-palette-13-bg: #fed74a;
  --yt-palette-14-bg: #b7e281;
  --yt-palette-15-bg: #d8f7f3;
  --yt-palette-16-bg: #e6e6e6;
  --yt-palette-17-bg: #e6f6cf;
  --yt-palette-18-bg: #ffee9c;
  --yt-palette-19-bg: #ffc8ea;
  --yt-palette-20-bg: #e30000;
  --yt-palette-21-bg: #e0f1fb;
  --yt-palette-22-bg: #fce5f1;
  --yt-palette-23-bg: #f7e9c1;
  --yt-palette-24-bg: #92e1d5;
  --yt-palette-25-bg: #a6e0fc;
  --yt-palette-26-bg: #e0c378;
  --yt-palette-27-bg: #bababa;
  --yt-palette-28-bg: #25beb2;
  --yt-palette-29-bg: #42a3df;
  --yt-palette-30-bg: #878787;
  --yt-palette-31-bg: #4d4d4d;
  --yt-palette-32-bg: #246512;
  --yt-palette-33-bg: #00665e;
  --yt-palette-34-bg: #553000;
  --yt-palette-35-bg: #1a1a1a;
}

.extra-margin-left {
  margin-left: calc(var(--ring-unit));
}

.extra-margin-right {
  margin-right: calc(var(--ring-unit));
}

.settings {
  margin: calc(var(--ring-unit) / 2);
}

div.dep-toolbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  justify-content: left;
  width: 100%;
}

span.dep-toolbar-right {
  margin-left: auto;
}

.nested-menu-item {
  display: flex;
  width: 100%;
}
.nested-menu-title {
  flex-grow: 1;
}
.nested-menu-button {
  all: unset;
  display: flex;
  width: 100%;
}
.nested-menu-button > * {
  width: 100%;
}

div.vertical-size-control-bar {
  margin-top: calc(var(--ring-unit) / 2);
  display: flex;
  justify-content: center;
  gap: calc(var(--ring-unit));
}

.vis-time-axis .vis-grid.vis-odd {
  background: #edf3ff; /* --ring-hover-background-color */
}

.vis-item {
  border-color: #6c707e !important; /* --ring-secondary-color */
}
.vis-item .vis-item-overflow {
  overflow: visible !important;
}
.vis-item.period {
  border-left-width: 4px;
  border-right-width: 4px;
}
.vis-item.start {
  border-left-width: 4px;
}
.vis-item.end {
  border-right-width: 4px;
}

.vis-item.period-overdue {
  box-shadow: 0 0 4px #a46704;
  border-left-width: 4px;
  border-right-width: 4px;
}

.vis-item.start-overdue {
  border-left-width: 4px;
  box-shadow: 0 0 4px #a46704;
}
.vis-item.end-overdue {
  border-right-width: 4px;
  box-shadow: 0 0 4px #a46704;
}

.vis-item.vis-selected {
  border-color: #27282e !important; /* --ring-text-color */
  box-shadow: 0 0 6px gray;
}

/* For some reason level 0 doesn't get vis-nested-group. */
.vis-label.vis-nesting-group.vis-group-level-0 .vis-inner {
  padding-left: 0;
}
.vis-label.vis-nested-group.vis-group-level-0 .vis-inner {
  padding-left: 0;
}
.vis-label.vis-nested-group.vis-group-level-1 {
  background-color: rgba(0, 0, 0, 0.05);
}
.vis-label.vis-nested-group.vis-group-level-1 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 1);
}
.vis-label.vis-nested-group.vis-group-level-2 {
  background-color: rgba(0, 0, 0, 0.1);
}
.vis-label.vis-nested-group.vis-group-level-2 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 2);
}
.vis-label.vis-nested-group.vis-group-level-3 {
  background-color: rgba(0, 0, 0, 0.15);
}
.vis-label.vis-nested-group.vis-group-level-3 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 3);
}
.vis-label.vis-nested-group.vis-group-level-4 {
  background-color: rgba(0, 0, 0, 0.2);
}
.vis-label.vis-nested-group.vis-group-level-4 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 4);
}
.vis-label.vis-nested-group.vis-group-level-5 {
  background-color: rgba(0, 0, 0, 0.25);
}
.vis-label.vis-nested-group.vis-group-level-5 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 5);
}
.vis-label.vis-nested-group.vis-group-level-6 {
  background-color: rgba(0, 0, 0, 0.3);
}
.vis-label.vis-nested-group.vis-group-level-6 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 6);
}
.vis-label.vis-nested-group.vis-group-level-7 {
  background-color: rgba(0, 0, 0, 0.35);
}
.vis-label.vis-nested-group.vis-group-level-7.vis-label .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 7);
}
.vis-label.vis-nested-group.vis-group-level-8 {
  background-color: rgba(0, 0, 0, 0.4);
}
.vis-label.vis-nested-group.vis-group-level-8 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 8);
}
.vis-label.vis-nested-group.vis-group-level-9 {
  background-color: rgba(0, 0, 0, 0.45);
}
.vis-label.vis-nested-group.vis-group-level-9 .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 9);
}
/* default takes over beginning with level-10 (thats why we add .vis-nested-group
  to the selectors above, to have higher specifity than these rules for the defaults) */
.vis-label.vis-nested-group {
  background-color: rgba(0, 0, 0, 0.5);
}
.vis-label.vis-nested-group .vis-inner {
  padding-left: calc(var(--vis-timeline-tree-step) * 10);
}
.vis-group-level-unknown-but-gte1 {
  border: 1px solid red;
}
/* expanded/collapsed indicators */
.vis-label.vis-nesting-group:before,
.vis-label.vis-nesting-group:before {
  display: inline-block;
  width: 15px;
}
.vis-label.vis-nesting-group.expanded:before {
  content: "\25BE" !important;
}
.vis-label.vis-nesting-group.collapsed:before {
  content: "\25B8" !important;
}
/* compensate missing expanded/collapsed indicator, but only at levels > 0 */
.vis-ltr .vis-label:not(.vis-nesting-group):not(.vis-group-level-0) {
  padding-left: 15px;
}
/* Style navigation controls to look OK in dark mode as well. */
div.vis-timeline {
  background-color: white;
  border-radius: var(--ring-border-radius);
  border: 1px solid var(--ring-borders-color);
}

div.dep-timeline {
  position: relative;
  margin-top: calc(var(--ring-unit) / 2);
  margin-bottom: calc(var(--ring-unit) / 2);
}

div.dep-timeline-controls {
  position: absolute;
  top: 0;
  right: 0;
  margin: 10px;
  z-index: 9999;
}

div.dep-graph-container {
  position: relative;
  margin-top: calc(var(--ring-unit) / 2);
  margin-bottom: calc(var(--ring-unit) / 2);
  height: var(--graph-height);
  width: 100%;
  background-color: white;
  border-radius: var(--ring-border-radius);
  border: 1px solid var(--ring-borders-color);
  z-index: 0;
}

div.dep-graph {
  height: 100%;
  width: 100%;
  position: relative;
}

div.dep-graph-controls {
  position: absolute;
  top: 0;
  right: 0;
  margin: var(--ring-unit);
  padding: calc(var(--ring-unit) / 2);
  z-index: 2;
  background-color: white;
  border-radius: var(--ring-border-radius);
  border: 1px solid var(--ring-borders-color);
  gap: calc(var(--ring-unit) / 2);
}

div.dep-graph-node-controls {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: var(--ring-unit);
  padding: calc(var(--ring-unit) / 2);
  z-index: 2;
  background-color: white;
  border-radius: var(--ring-border-radius);
  border: 1px solid var(--ring-borders-color);
  gap: calc(var(--ring-unit) / 2);
  display: flex;
  flex-direction: column;
}

